// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> renders correctly 1`] = `
.emotion-6 {
  margin: 1rem 0;
  padding-left: 2rem;
}

.emotion-0 {
  margin: 0 0;
}

<List
  columns={null}
  flush={false}
  ordered={false}
>
  <ListBase
    as="ul"
    columns={null}
    flush={false}
    ordered={false}
  >
    <ul
      className="emotion-6 emotion-7"
    >
      <ListItem>
        <li
          className="emotion-0 emotion-1"
        >
          Hello Item 1
        </li>
      </ListItem>
      <ListItem>
        <li
          className="emotion-0 emotion-1"
        >
          Hello Item 2
        </li>
      </ListItem>
      <ListItem>
        <li
          className="emotion-0 emotion-1"
        >
          Hello Item 3
        </li>
      </ListItem>
    </ul>
  </ListBase>
</List>
`;

exports[`<List /> with columns set renders correctly 1`] = `
.emotion-0 {
  margin: 0 0;
}

.emotion-6 {
  margin: 1rem 0;
  padding-left: 2rem;
  list-style-position: inside;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
}

.emotion-6 .emotion-1 {
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  padding: 0 0.5rem;
  -webkit-flex-basis: 33.333333333333336%;
  -ms-flex-preferred-size: 33.333333333333336%;
  flex-basis: 33.333333333333336%;
}

<List
  columns={3}
  flush={false}
  ordered={false}
>
  <ListBase
    as="ul"
    columns={3}
    flush={false}
    ordered={false}
  >
    <ul
      className="emotion-6 emotion-7"
    >
      <ListItem>
        <li
          className="emotion-0 emotion-1"
        >
          Hello Item 1
        </li>
      </ListItem>
      <ListItem>
        <li
          className="emotion-0 emotion-1"
        >
          Hello Item 2
        </li>
      </ListItem>
      <ListItem>
        <li
          className="emotion-0 emotion-1"
        >
          Hello Item 3
        </li>
      </ListItem>
    </ul>
  </ListBase>
</List>
`;

exports[`<List /> with flush set renders correctly 1`] = `
.emotion-0 {
  margin: 0 0;
}

.emotion-6 {
  margin: 1rem 0;
  padding-left: 2rem;
  list-style-position: inside;
  padding-left: 0;
}

<List
  columns={null}
  flush={true}
  ordered={false}
>
  <ListBase
    as="ul"
    columns={null}
    flush={true}
    ordered={false}
  >
    <ul
      className="emotion-6 emotion-7"
    >
      <ListItem>
        <li
          className="emotion-0 emotion-1"
        >
          Hello Item 1
        </li>
      </ListItem>
      <ListItem>
        <li
          className="emotion-0 emotion-1"
        >
          Hello Item 2
        </li>
      </ListItem>
      <ListItem>
        <li
          className="emotion-0 emotion-1"
        >
          Hello Item 3
        </li>
      </ListItem>
    </ul>
  </ListBase>
</List>
`;

exports[`<List /> with ordered prop renders correctly 1`] = `
.emotion-6 {
  margin: 1rem 0;
  padding-left: 2rem;
}

.emotion-0 {
  margin: 0 0;
}

<List
  columns={null}
  flush={false}
  ordered={true}
>
  <ListBase
    as="ol"
    columns={null}
    flush={false}
    ordered={true}
  >
    <ol
      className="emotion-6 emotion-7"
    >
      <ListItem>
        <li
          className="emotion-0 emotion-1"
        >
          Hello Item 1
        </li>
      </ListItem>
      <ListItem>
        <li
          className="emotion-0 emotion-1"
        >
          Hello Item 2
        </li>
      </ListItem>
      <ListItem>
        <li
          className="emotion-0 emotion-1"
        >
          Hello Item 3
        </li>
      </ListItem>
    </ol>
  </ListBase>
</List>
`;

exports[`<List /> with responsive columns set renders correctly 1`] = `
.emotion-0 {
  margin: 0 0;
}

.emotion-6 {
  margin: 1rem 0;
  padding-left: 2rem;
  list-style-position: inside;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
}

.emotion-6 .emotion-1 {
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  padding: 0 0.5rem;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

@media screen and (min-width:40rem) {
  .emotion-6 .emotion-1 {
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
  }
}

@media screen and (min-width:52rem) {
  .emotion-6 .emotion-1 {
    -webkit-flex-basis: 33.333333333333336%;
    -ms-flex-preferred-size: 33.333333333333336%;
    flex-basis: 33.333333333333336%;
  }
}

<List
  columns={
    Array [
      1,
      2,
      3,
    ]
  }
  flush={false}
  ordered={false}
>
  <ListBase
    as="ul"
    columns={
      Array [
        1,
        2,
        3,
      ]
    }
    flush={false}
    ordered={false}
  >
    <ul
      className="emotion-6 emotion-7"
    >
      <ListItem>
        <li
          className="emotion-0 emotion-1"
        >
          Hello Item 1
        </li>
      </ListItem>
      <ListItem>
        <li
          className="emotion-0 emotion-1"
        >
          Hello Item 2
        </li>
      </ListItem>
      <ListItem>
        <li
          className="emotion-0 emotion-1"
        >
          Hello Item 3
        </li>
      </ListItem>
    </ul>
  </ListBase>
</List>
`;
